Fix vacancies list spacing and alignment

--- a/website/modules/asset/ui/src/scss/_vacancies.scss
+++ b/website/modules/asset/ui/src/scss/_vacancies.scss
@@ -77,9 +77,7 @@
         min-width: 100px;
       }
     }
-  }
 
-  .vacancy-card {
     & + .sf-vacancies_footer {
       h2 {
         margin-top: 48px;
